# tlg-vk-repost-bot

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-build.yml
alembic/: env.py
alembic/versions/: 20260203_0001_init.py
app/: config.py  crud.py  db.py  logging_setup.py  models.py
app/tasks/: celery_app.py  repost.py  utils.py
app/tg/: __init__.py  album_aggregator.py  client.py  commands.py  formatting.py  polling.py  updates.py
app/utils/: files.py  locks.py  retry.py
app/vk/: __init__.py  client.py  token_manager.py  types.py  uploads.py  wall.py
scripts/: deploy_server.sh  run_poller.sh  run_worker.sh
tests/: test_imports.py
